ADD_SUBDIRECTORY(foundation)
ADD_SUBDIRECTORY(extlibs)

IF(N_BUILD_FIRSTTIME)
	ADD_SUBDIRECTORY(toolkit)
ELSE()
	ADD_SUBDIRECTORY(render)    
    ADD_SUBDIRECTORY(addons)
    ADD_SUBDIRECTORY(application)
        

	IF(N_BUILD_BENCHMARKS)
		ADD_SUBDIRECTORY(benchmarks)
	ENDIF()
	IF(N_BUILD_TESTS)
		ADD_SUBDIRECTORY(tests)
	ENDIF()
	IF(N_BUILD_TOOLKIT)
		FIND_PACKAGE(FBX REQUIRED)
		INCLUDE_DIRECTORIES(${FBX_INCLUDE_DIR})
		ADD_SUBDIRECTORY(toolkit)
		IF(N_BUILD_QT)
			ADD_SUBDIRECTORY(qttoolkit)
		ENDIF()
	ENDIF()
	if(N_BUILD_PLUGIN)
		IF(CMAKE_CL_64)
			ADD_SUBDIRECTORY(mayaplugin)
		ENDIF()
	ENDIF()

	IF(N_BUILD_EXTERNAL_PROJECTS)
		ADD_SUBDIRECTORY(../projects ${CMAKE_BINARY_DIR}/projects)
	ENDIF()
ENDIF()

