INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_SUBDIRECTORY(foundation)
ADD_SUBDIRECTORY(extlibs)
ADD_SUBDIRECTORY(physics)
ADD_SUBDIRECTORY(render)    
ADD_SUBDIRECTORY(addons)
ADD_SUBDIRECTORY(application)

	
SET(DEFAULT_FEATURES graphicsfeature physicsfeature scriptingfeature ui) 
	
IF(N_BUILD_EXTERNAL_PROJECTS)
	ADD_SUBDIRECTORY(../projects ${CMAKE_BINARY_DIR}/projects)
ENDIF()
