
FUNCTION(ProjectFromFolder fullpath projname)
	string(FIND ${CMAKE_CURRENT_SOURCE_DIR} "/code" cp REVERSE)
	string(SUBSTRING ${CMAKE_CURRENT_SOURCE_DIR} 0 ${cp} prj)
	string(FIND ${prj} "/" cp REVERSE)
	string(SUBSTRING ${prj} ${cp} -1 output2) 	
	string(SUBSTRING ${output2} 1 -1 output) 
	SET(${projname} ${output} PARENT_SCOPE)	
ENDFUNCTION()	

FILE(GLOB alldirs ./*)
foreach(dir ${alldirs})
        if(IS_DIRECTORY ${dir})
			if(EXISTS ${dir}/code/CMakeLists.txt)
                add_subdirectory(${dir}/code)
            endif()			
        endif()
endforeach()