ADD_SUBDIRECTORY(attr)
# audio2 (which is based on fmodex is deprecated)
#ADD_SUBDIRECTORY(audio2)
ADD_SUBDIRECTORY(faudio)
ADD_SUBDIRECTORY(db)
ADD_SUBDIRECTORY(forest)
ADD_SUBDIRECTORY(framecapture)
ADD_SUBDIRECTORY(effects)
ADD_SUBDIRECTORY(minimap)
ADD_SUBDIRECTORY(multiplayer)
ADD_SUBDIRECTORY(navigation)
ADD_SUBDIRECTORY(dynui)
#broken (needs old n2 math code)
#ADD_SUBDIRECTORY(nebula2)
ADD_SUBDIRECTORY(posteffect)
ADD_SUBDIRECTORY(remote)
ADD_SUBDIRECTORY(scripting)
ADD_SUBDIRECTORY(ui)
ADD_SUBDIRECTORY(vibration)
ADD_SUBDIRECTORY(vr)

IF(N_QT_NEB_SUPPORT)
ADD_SUBDIRECTORY(qtfeature)
ENDIF()
#broken, uses old render code
#ADD_SUBDIRECTORY(vegetation)
IF(MSVC)

#broken, uses bink, needs to be replaced with some ogg code from n2
ADD_SUBDIRECTORY(video)
ENDIF()
ADD_SUBDIRECTORY(grid)
ADD_SUBDIRECTORY(clouds)
ADD_SUBDIRECTORY(silhouette)
