ADD_SUBDIRECTORY(attr)
ADD_SUBDIRECTORY(faudio)
ADD_SUBDIRECTORY(db)
ADD_SUBDIRECTORY(forest)
ADD_SUBDIRECTORY(framecapture)
ADD_SUBDIRECTORY(effects)
ADD_SUBDIRECTORY(minimap)
ADD_SUBDIRECTORY(multiplayer)
ADD_SUBDIRECTORY(navigation)
ADD_SUBDIRECTORY(dynui)
ADD_SUBDIRECTORY(posteffect)
ADD_SUBDIRECTORY(remote)
ADD_SUBDIRECTORY(scripting)
ADD_SUBDIRECTORY(ui)
ADD_SUBDIRECTORY(vibration)
ADD_SUBDIRECTORY(vr)

#broken, uses old render code
#ADD_SUBDIRECTORY(vegetation)

ADD_SUBDIRECTORY(video)
ADD_SUBDIRECTORY(grid)
ADD_SUBDIRECTORY(clouds)
ADD_SUBDIRECTORY(silhouette)
